installed JQuery and restructured site layout

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 </head>
 <body>
 	<div id="logo">JAIME</div>
+	<hr>
+	<div class="nav-bar">
+		<a href="index.html"><div class="link" id="home">Home</div></a>
+		<a href="categories.html"><div class="link">Categories</div></a>
+		<a href="charts.html"><div class="link">My Chart</div></a>
+	</div>
+	<br>
 	<div id="bi-weekly">
 		<form action="/action_page.php" onsubmit="myFunction()">
 			Bi-Weekly Wage: $ <input type="number" id="myWage" name="myWage">
@@ -15,6 +22,11 @@
 			</div>
 		</form>
 	</div>
+
+
+	
+
+
 	<script src="js/jaime.js"></script>
 </body>
 </html>
